@@ -119,6 +119,9 @@ Trunk (not yet released)
     AVRO-1624. Java. Surefire forkMode is deprecated. (Niels Basjes via
     tomwhite)
 
+    AVRO-1630. Java: Creating Builder from instance loses data. (Niels Basjes
+    via tomwhite)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
